Fix styling: reduce header height, remove rounded corners, align containers, center close button

--- a/src/components/accounts/AccountDetail.module.css
+++ b/src/components/accounts/AccountDetail.module.css
@@ -71,7 +71,7 @@
 
 .closeButton {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   width: 36px;
   height: 36px;
